updated button styling. Fixed services tab overflow. Updated payout and payout information page style

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,7 +95,7 @@ body {
 }
 
 .sign-up, .sign-in {
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
 
 .btn-outline-success {
@@ -323,6 +323,7 @@ body{
   margin-left: 40px;
   width: 200px;
   height: 200px;
+  background-color: #cae4fb;
 }
 
 .statistics {
